fix css ball on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,11 @@ body {
   text-align: center;
   background-color: #f2f2f2;
 }
+@media screen and (max-width: 577px) {
+  #numberPanel {
+    padding-top: 100px;
+  }
+}
 #numberPanel .container {
   max-width: 1140px;
   margin: 0 auto;
@@ -77,10 +82,10 @@ body {
 }
 @media screen and (max-width: 390px) {
   #numberPanel .number-content p {
-    width: 30px;
-    height: 30px;
+    width: 45px;
+    height: 45px;
     font-size: 1.5rem;
-    line-height: 1.5rem;
+    line-height: 2.5rem;
   }
 }
 
