--- a/sass/layout/_home.scss
+++ b/sass/layout/_home.scss
@@ -5,6 +5,12 @@
     text-align: center;
     background-color: #f2f2f2;
 
+    @media screen and (max-width:577px) {
+        padding-top: 100px;
+        // min-height: 100%;
+    }
+
+
     .container {
         max-width: 1140px;
         margin: 0 auto;
@@ -21,7 +27,6 @@
         min-height: 400px;
         padding: 120px 0;
         border: 1px dotted;
-
 
         p {
             height: 100px;
@@ -51,10 +56,10 @@
             }
 
             @media screen and (max-width:390px) {
-                width: 30px;
-                height: 30px;
+                width: 45px;
+                height: 45px;
                 font-size: 1.5rem;
-                line-height: 1.5rem;
+                line-height: 2.5rem;
 
             }
         }
